--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.Login"
         tools:targetApi="31">
         <activity
+            android:name=".CuacaMainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_cuaca_main"
+            android:theme="@style/Theme.Login.NoActionBar" />
+        <activity
             android:name=".ForexMainActivity"
             android:exported="false"
             android:label="@string/title_activity_forex_main"
